--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,10 @@
 SKIP_PREFLIGHT_CHECK=true
+
+REACT_APP_FIREBASE_API_KEY=AIzaSyA388h-6j6bKj4TpJMZqYy6rDuCWgsLVGs
+REACT_APP_FIREBASE_AUTH_DOMAIN=natura-e7e71.firebaseapp.com
+REACT_APP_FIREBASE_PROJECT_ID=natura-e7e71
+REACT_APP_FIREBASE_STORAGE_BUCKET=natura-e7e71.appspot.com
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID=81336958322
+REACT_APP_FIREBASE_APP_ID=1:81336958322:web:50a9c3798839dc5e12f1eb
+REACT_APP_FIREBASE_MEASUREMENT_ID=G-QPJE52JN7Z
+
