--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,11 +7,12 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/material": "^5.12.0",
+    "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.3.5",
+    "axios": "^1.7.7",
     "dompurify": "^3.1.6",
     "firebase": "^9.21.0",
     "jwt-decode": "^3.1.2",
